# serializer version: 1
# name: TestChi2Call.test_call_default[event]
  4.6547
# ---
# name: TestChi2Call.test_call_default[interval]
  65.3605
# ---
# name: TestChi2Call.test_call_default[state]
  132.1817
# ---
# name: TestChi2Call.test_call_with_explicit_features[event]
  2.8895
# ---
# name: TestChi2Call.test_call_with_explicit_features[interval]
  29.5346
# ---
# name: TestChi2Call.test_call_with_explicit_features[state]
  126.9342
# ---
# name: TestChi2Call.test_call_with_multiple_features[event]
  4.6547
# ---
# name: TestChi2Call.test_call_with_multiple_features[interval]
  61.0901
# ---
# name: TestChi2Call.test_call_with_multiple_features[state]
  132.1817
# ---
